# ws_rand_service

./: Anchor.toml  Arcium.toml  README.md  package.json
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/ws_rand_service/: Cargo.toml
programs/ws_rand_service/src/: lib.rs
tests/: ws_rand_service.ts
